<resources>
    <string name="app_name">Bmsit</string>
    <!-- Strings related to login -->
    <string name="user_usn">Usn</string>

    <string name="user_name">Name</string>
    <string name="no_account">No Account ?</string>
    <string name="have_account">Already Registered ?</string>
    <string name="user_phone_number">Phone Number</string>
    <string name="sign_up">Sign In</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="pre_account">Already Registered ?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ??</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="tab_text_1">Main</string>
    <string name="tab_text_2">Posts</string>
    <string name="Subjects">Subjects</string>
    <string name="time_table">Time Table</string>
    <string name="teacher_info">Teachers</string>
    <string name="teacher_notes">Teachers Notes</string>
    <string name="d_space">D-Space</string>
    <string name="results">Results</string>
    <string name="title_activity_user__logs">User_Logs</string>


    <string-array name="Branch_Array">
        <item>Branch</item>
        <item>EC</item>
        <item>CSE</item>
        <item>ISE</item>
        <item>TCE</item>
        <item>EEE</item>
        <item>ME</item>
        <item>CE</item>
        <item>AI and ML</item>
    </string-array>


    <string-array name="Semister_Array">
        <item>Sem</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>


    <string-array name="Section_Array">
        <item>Sec</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user_logs">user_logs</string>
</resources>
