<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dbcf5c"
    android:orientation="vertical"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:text="Loading...please wait..."
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.github.ybq.android.spinkit.SpinKitView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.Circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/colorAccent" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="127dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo" />


        <EditText
            android:id="@+id/user_name"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="55dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_username"
            android:hint="@string/user_name"
            android:orientation="vertical"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_usn"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_userusn"
            android:hint="@string/user_usn"
            android:orientation="vertical"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editText"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_user_email"
            android:hint="@string/prompt_email"
            android:orientation="vertical"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/user_phone_number"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_user_phone_number"
            android:hint="@string/user_phone_number"
            android:orientation="vertical"
            android:textStyle="bold" />



        <EditText
            android:id="@+id/user_password"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:orientation="vertical"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/text_size">

            <Spinner
                android:id="@+id/Branch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                >

            </Spinner>

            <Spinner
                android:id="@+id/Sem"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp">

            </Spinner>

            <Spinner
                android:id="@+id/Section"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="1dp">

            </Spinner>



        </LinearLayout>

        <Button
            android:id="@+id/user_signin"
            android:layout_width="137dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button"
            android:hint="@string/sign_up"
            android:textAlignment="center"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="20dp"
                android:hint="@string/have_account"
                android:textStyle="bold"
                android:textColor="@android:color/background_dark"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/user_login"
                android:layout_width="79dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:clickable="true"
                android:textStyle="bold"
                android:textColor="@color/light_brown"
                android:text="@string/login"

                android:textSize="@dimen/text_size" />

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</ScrollView>
