<?xml version="1.0" encoding="utf-8"?>
<ScrollView

  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context=".ui.main.PlaceholderFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/section_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1" />

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tvLoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:text="Loading...please wait..."
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_size">



                <Button
                    android:id="@+id/user_subjects"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:hint="@string/Subjects"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/user_timetable"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button"
                    android:hint="@string/time_table"
                    android:textAlignment="center"
                    android:textStyle="bold" />


            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_size">



            <Button
                android:id="@+id/user_teachers_info"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:hint="@string/teacher_info"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/user_tachers_notes"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:hint="@string/teacher_notes"
                android:textAlignment="center"
                android:textStyle="bold" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_size">



            <Button
                android:id="@+id/d_space"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:hint="@string/d_space"
                android:textAlignment="center"
                android:textStyle="bold" />

            <Button
                android:id="@+id/results"
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button"
                android:hint="@string/results"
                android:textAlignment="center"
                android:textStyle="bold" />


        </LinearLayout>


        </LinearLayout>

</ScrollView>
